[package]
name = "azure-secrets-refresh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
#axum = { version = "0.6", default_features = false, features = ["http1", "matched-path", "tokio"] }
#axum-macros = "0.3"
aws-sdk-secretsmanager = "0.22"
chrono = "0.4"
config = { version = "0.13", features = ["ini"] }
oauth2 = "4"
reqwest = { version = "0.11", default_features = false, features = ["gzip", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "parking_lot", "rt", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "smallvec"] }


[profile.release]
lto = true
incremental = false
codegen-units = 1
panic = "abort"
strip = true
